load("//tools:dlinear.bzl", "dlinear_cc_googletest")

dlinear_cc_googletest(
    name = "test_gmp",
    tags = ["libs"],
    deps = ["//dlinear/libs:gmp"],
)

dlinear_cc_googletest(
    name = "test_soplex",
    tags = ["libs"],
    deps = select({
        "//tools:enabled_soplex": ["//dlinear/libs:soplex"],
        "//conditions:default": [],
    }),
)

dlinear_cc_googletest(
    name = "test_qsopt_ex",
    tags = ["libs"],
    deps = select({
        "//tools:enabled_qsoptex": ["//dlinear/libs:qsopt_ex"],
        "//conditions:default": [],
    }),
)
