load("//tools:dlinear.bzl", "dlinear_cc_googletest")

dlinear_cc_googletest(
    name = "test_sort",
    tags = ["smt2"],
    deps = ["//dlinear/smt2:sort"],
)

dlinear_cc_googletest(
    name = "test_term",
    tags = ["smt2"],
    deps = ["//dlinear/smt2:term"],
)

dlinear_cc_googletest(
    name = "test_command",
    tags = ["smt2"],
    deps = ["//dlinear/smt2:command"],
)

dlinear_cc_googletest(
    name = "test_function_definition",
    tags = ["smt2"],
    deps = [
        "//dlinear/smt2:function_definition",
        "//test/symbolic:test_symbolic_utils",
    ],
)

dlinear_cc_googletest(
    name = "test_smt2_driver",
    tags = ["smt2"],
    deps = [
        "//dlinear/smt2",
        "//test/symbolic:test_symbolic_utils",
    ],
)
