load("//tools:dlinear.bzl", "dlinear_cc_binary", "dlinear_cc_googletest", "dlinear_cc_library", "solver_test_all")

dlinear_cc_library(
    name = "test_solver_utils",
    hdrs = ["TestSolverUtils.h"],
    visibility = ["//test:__subpackages__"],
    deps = [
        "//dlinear/util:config",
        "@com_google_googletest//:gtest",
    ],
)

dlinear_cc_googletest(
    name = "test_context",
    deps = [
        ":test_solver_utils",
        "//dlinear/solver:context",
        "//test/symbolic:test_symbolic_utils",
    ],
)

dlinear_cc_googletest(
    name = "test_solver",
    deps = [
        ":test_solver_utils",
        "//dlinear/solver",
    ],
)

dlinear_cc_googletest(
    name = "test_picosat_sat_solver",
    deps = [
        "//dlinear/solver:sat_solver",
        "//dlinear/solver:solver_guard",
    ],
)

dlinear_cc_googletest(
    name = "test_smt2",
    data = glob(["smt2/*.smt2"]),
    deps = [
        ":test_solver_utils",
        "//dlinear/solver",
    ],
)

dlinear_cc_binary(
    name = "test_solver_binary",
    srcs = ["MainTestSolver.cpp"],
    deps = [
        "//dlinear/solver",
        "//dlinear/util:argparser",
        "//dlinear/util:config",
    ],
)

solver_test_all()
