load("//tools:dlinear.bzl", "dlinear_cc_googletest", "dlinear_cc_library")

dlinear_cc_library(
    name = "test_solver_utils",
    hdrs = ["TestSolverUtils.h"],
    tags = ["solver"],
    visibility = ["//test:__subpackages__"],
    deps = [
        "//dlinear/solver",
        "//dlinear/util:config",
        "//dlinear/util:filesystem",
        "@googletest//:gtest",
    ],
)

dlinear_cc_googletest(
    name = "test_theory_solver_bound_vector",
    tags = ["solver"],
    deps = ["//dlinear/solver:theory_solver_bounds"],
)

dlinear_cc_googletest(
    name = "test_theory_solver_bound_iterator",
    tags = ["solver"],
    deps = ["//dlinear/solver:theory_solver_bounds"],
)

dlinear_cc_googletest(
    name = "test_theory_solver_bound_preprocessor",
    tags = ["solver"],
    deps = [
        "//dlinear/solver:theory_solver",
        "//dlinear/solver:theory_solver_bound_preprocessor",
        "//test/symbolic:test_symbolic_utils",
    ],
)

dlinear_cc_googletest(
    name = "test_context",
    tags = ["solver"],
    deps = [
        ":test_solver_utils",
        "//dlinear/solver:context",
        "//test/symbolic:test_symbolic_utils",
    ],
)

dlinear_cc_googletest(
    name = "test_solver",
    tags = ["solver"],
    deps = [
        ":test_solver_utils",
        "//dlinear/solver",
        "//dlinear/util:infinity",
    ],
)

dlinear_cc_googletest(
    name = "test_picosat_sat_solver",
    tags = ["solver"],
    deps = [
        "//dlinear/solver:sat_solver",
        "//dlinear/solver:solver_guard",
    ],
)

dlinear_cc_googletest(
    name = "test_soplex_theory_solver",
    tags = ["solver"],
    deps = [
        ":test_solver_utils",
        "//dlinear/solver:theory_solver",
        "//test/symbolic:test_symbolic_utils",
    ],
)

dlinear_cc_googletest(
    name = "test_smt2",
    size = "medium",
    data = glob(["smt2/*.smt2"]),
    tags = ["solver"],
    deps = [
        ":test_solver_utils",
        "//dlinear/solver",
    ],
)

dlinear_cc_googletest(
    name = "test_mps",
    size = "medium",
    data = glob(["mps/*.mps"]),
    tags = ["solver"],
    deps = [
        ":test_solver_utils",
        "//dlinear/solver",
    ],
)
