load("//tools:dlinear.bzl", "dlinear_cc_googletest", "dlinear_cc_library")

dlinear_cc_library(
    name = "test_solver_utils",
    hdrs = ["TestSolverUtils.h"],
    tags = ["solver"],
    visibility = ["//test:__subpackages__"],
    deps = [
        "//dlinear/solver",
        "//dlinear/util:config",
        "//dlinear/util:exception",
        "//dlinear/util:filesystem",
        "@googletest//:gtest",
    ],
)

dlinear_cc_googletest(
    name = "test_bound_vector",
    tags = ["solver"],
    deps = ["//dlinear/solver:bound_vector"],
)

dlinear_cc_googletest(
    name = "test_bound_preprocessor",
    tags = ["solver"],
    deps = ["//dlinear/solver:bound_preprocessor"],
)

dlinear_cc_googletest(
    name = "test_bound_iterator",
    tags = ["solver"],
    deps = ["//dlinear/solver:bound_iterator"],
)

dlinear_cc_googletest(
    name = "test_context",
    tags = ["solver"],
    deps = [
        ":test_solver_utils",
        "//dlinear/solver:context",
    ],
)

dlinear_cc_googletest(
    name = "test_smt_solver",
    tags = ["solver"],
    deps = [
        ":test_solver_utils",
        "//dlinear/solver",
    ],
)

dlinear_cc_googletest(
    name = "test_picosat_sat_solver",
    tags = ["solver"],
    deps = ["//dlinear/solver/sat_solver"],
)

dlinear_cc_googletest(
    name = "test_cadical_sat_solver",
    tags = ["solver"],
    deps = ["//dlinear/solver/sat_solver"],
)

dlinear_cc_googletest(
    name = "test_soplex_theory_solver",
    tags = ["solver"],
    deps = [
        ":test_solver_utils",
        "//dlinear/solver:theory_solver",
    ],
)

dlinear_cc_googletest(
    name = "test_delta_smt2",
    size = "enormous",
    data = glob(["smt2/*.smt2"]),
    tags = ["solver"],
    deps = [
        ":test_solver_utils",
        "//dlinear/solver",
    ],
)

dlinear_cc_googletest(
    name = "test_complete_smt2",
    size = "large",
    data = glob(["smt2/*.smt2"]),
    tags = ["solver"],
    deps = [
        ":test_solver_utils",
        "//dlinear/solver",
    ],
)

dlinear_cc_googletest(
    name = "test_delta_mps",
    size = "enormous",
    data = glob(["mps/*.mps"]),
    tags = ["solver"],
    deps = [
        ":test_solver_utils",
        "//dlinear/solver",
    ],
)

dlinear_cc_googletest(
    name = "test_delta_vnnlib",
    size = "enormous",
    data = glob([
        "vnnlib/*.vnnlib",
        "vnnlib/*.onnx",
    ]),
    tags = ["solver"],
    deps = [
        ":test_solver_utils",
        "//dlinear/solver",
    ],
)
