load("//tools:dlinear.bzl", "dlinear_cc_googletest", "dlinear_cc_library")

dlinear_cc_library(
    name = "test_symbolic_utils",
    hdrs = ["TestSymbolicUtils.h"],
    tags = ["symbolic"],
    visibility = ["//test:__subpackages__"],
    deps = [
        "//dlinear/symbolic",
        "//dlinear/util:infinity",
        "//third_party/com_github_robotlocomotion_drake:drake_symbolic",
    ] + select({
        "//tools:enabled_soplex": ["//dlinear/libs:soplex"],
        "//conditions:default": [],
    }) + select({
        "//tools:enabled_qsoptex": ["//dlinear/libs:qsopt_ex"],
        "//conditions:default": [],
    }),
)

dlinear_cc_googletest(
    name = "test_if_then_else_eliminator",
    tags = ["symbolic"],
    deps = [
        ":test_symbolic_utils",
        "//dlinear/symbolic:if_then_else_eliminator",
    ],
)

dlinear_cc_googletest(
    name = "test_nnfizer",
    tags = ["symbolic"],
    deps = [
        ":test_symbolic_utils",
        "//dlinear/symbolic:nnfizier",
    ],
)

dlinear_cc_googletest(
    name = "test_symbolic",
    tags = ["symbolic"],
    deps = [
        ":test_symbolic_utils",
        "//dlinear/symbolic",
    ],
)

dlinear_cc_googletest(
    name = "test_prefix_printer",
    tags = ["symbolic"],
    deps = [
        ":test_symbolic_utils",
        "//dlinear/symbolic:prefix_printer",
    ],
)

dlinear_cc_googletest(
    name = "test_predicate_abstractor",
    tags = ["symbolic"],
    deps = [
        ":test_symbolic_utils",
        "//dlinear/symbolic:predicate_abstractor",
    ],
)

dlinear_cc_googletest(
    name = "test_plaisted_greenbaum_cnfizer",
    tags = ["symbolic"],
    deps = [
        ":test_symbolic_utils",
        "//dlinear/symbolic:plaisted_greenbaum_cnfizer",
    ],
)

dlinear_cc_googletest(
    name = "test_tseitin_cnfizer",
    tags = ["symbolic"],
    deps = [
        ":test_symbolic_utils",
        "//dlinear/symbolic:tseitin_cnfizer",
    ],
)
