load("//tools:dlinear.bzl", "dlinear_cc_googletest")

dlinear_cc_googletest(
    name = "test_argparser",
    tags = ["util"],
    deps = ["//dlinear/util:argparser"],
)

dlinear_cc_googletest(
    name = "test_logging",
    tags = ["util"],
    deps = ["//dlinear/util:logging"],
)

dlinear_cc_googletest(
    name = "test_box",
    tags = ["util"],
    deps = [
        "//dlinear/util:box",
        "//test/solver:test_solver_utils",
        "//test/symbolic:test_symbolic_utils",
    ],
)

dlinear_cc_googletest(
    name = "test_exception",
    tags = ["util"],
    deps = ["//dlinear/util:error"],
)

dlinear_cc_googletest(
    name = "test_filesystem",
    tags = ["util"],
    deps = ["//dlinear/util:filesystem"],
)

dlinear_cc_googletest(
    name = "test_math",
    tags = ["util"],
    deps = ["//dlinear/util:math"],
)

dlinear_cc_googletest(
    name = "test_scoped_structures",
    tags = ["util"],
    deps = ["//dlinear/util:scoped_structures"],
)

dlinear_cc_googletest(
    name = "test_timer",
    tags = ["util"],
    deps = ["//dlinear/util:timer"],
)

dlinear_cc_googletest(
    name = "test_config",
    tags = ["util"],
    deps = ["//dlinear/util:config"],
)

dlinear_cc_googletest(
    name = "test_bit_increment_iterator",
    tags = ["util"],
    deps = ["//dlinear/util:bit_increment_iterator"],
)

dlinear_cc_googletest(
    name = "test_sorted_vector",
    tags = ["util"],
    deps = ["//dlinear/util:sorted_vector"],
)

dlinear_cc_googletest(
    name = "test_graph",
    tags = ["util"],
    deps = ["//dlinear/util:graph"],
)

dlinear_cc_googletest(
    name = "test_numeric_data_container",
    tags = ["util"],
    deps = [
        "//dlinear/libs:gmp",
        "//dlinear/util:numeric_data_container",
    ],
)
