load("//tools:dlinear.bzl", "dlinear_cc_googletest", "dlinear_cc_library")

dlinear_cc_library(
    name = "test_symbolic_utils",
    hdrs = ["TestSymbolicUtils.h"],
    visibility = ["//tests:__subpackages__"],
    deps = [
        "//dlinear/libs:qsopt_ex",
        "//dlinear/libs:soplex",
        "//dlinear/symbolic",
        "//dlinear/util:infty",
        "//third_party/com_github_robotlocomotion_drake:drake_symbolic",
    ],
)

dlinear_cc_googletest(
    name = "test_if_then_else_eliminator",
    deps = [
        ":test_symbolic_utils",
        "//dlinear/symbolic:if_then_else_eliminator",
    ],
)

dlinear_cc_googletest(
    name = "test_nnfizer",
    deps = [
        ":test_symbolic_utils",
        "//dlinear/symbolic:nnfizier",
    ],
)

dlinear_cc_googletest(
    name = "test_symbolic",
    deps = [
        ":test_symbolic_utils",
        "//dlinear/symbolic",
    ],
)

dlinear_cc_googletest(
    name = "test_prefix_printer",
    deps = [
        ":test_symbolic_utils",
        "//dlinear/symbolic",
    ],
)
