load("//tools:dlinear.bzl", "dlinear_cc_googletest")

dlinear_cc_googletest(
    name = "test_argparser",
    deps = ["//dlinear/util:argparser"],
)

dlinear_cc_googletest(
    name = "test_logging",
    deps = ["//dlinear/util:logging"],
)

dlinear_cc_googletest(
    name = "test_box",
    deps = [
        "//dlinear/util:box",
        "//tests/sybmolic:test_symbolic_utils",
    ],
)

dlinear_cc_googletest(
    name = "test_exception",
    deps = ["//dlinear/util:exception"],
)

dlinear_cc_googletest(
    name = "test_filesystem",
    deps = ["//dlinear/util:filesystem"],
)

dlinear_cc_googletest(
    name = "test_math",
    deps = ["//dlinear/util:math"],
)

dlinear_cc_googletest(
    name = "test_scoped_vector",
    deps = ["//dlinear/util:scoped_vector"],
)

dlinear_cc_googletest(
    name = "test_timer",
    deps = ["//dlinear/util:timer"],
)
