load("//tools:cpplint.bzl", "cpplint")
load("//tools:dlinear.bzl", "dlinear_cc_library", "dlinear_srcs")
load("//tools:lexyacc.bzl", "gen_lex", "gen_yacc")

package(default_visibility = [
    "//benchmark:__subpackages__",
    "//dlinear:__subpackages__",
    "//pydlinear:__subpackages__",
    "//test:__subpackages__",
])

dlinear_srcs(
    name = "srcs",
    subfolder = "mps",
)

gen_lex(
    name = "scanner",
    src = "scanner.ll",
    hdr = "scanner.h",
    source_out = "scanner.ll.cpp",
    visibility = ["//visibility:private"],
)

gen_yacc(
    name = "parser",
    src = "parser.yy",
    extra_outs = ["location.hh"],
    header_out = "parser.yy.hpp",
    source_out = "parser.yy.cpp",
    visibility = ["//visibility:private"],
)

dlinear_cc_library(
    name = "mps_data",
    srcs = [
        "BoundType.cpp",
        "Sense.cpp",
    ],
    hdrs = [
        "BoundType.h",
        "Sense.h",
    ],
    implementation_deps = ["//dlinear/util:exception"],
    deps = ["//dlinear/util:logging"],
)

dlinear_cc_library(
    name = "mps",
    srcs = [
        "Driver.cpp",
        ":parser",
        ":scanner",
    ],
    hdrs = ["Driver.h"],
    implementation_deps = [
        "//dlinear/util:exception",
        "//dlinear/util:logging",
    ],
    tags = [
        "no-dwyu",
        "no-iwyu",
    ],
    deps = [
        ":mps_data",
        "//dlinear/libs:gmp",
        "//dlinear/parser:driver",
        "//dlinear/solver:context",
        "//dlinear/symbolic",
        "@rules_flex//flex:current_flex_toolchain",
    ] + select({
        "//tools:pydlinear_build": ["//pydlinear:interrupt"],
        "//conditions:default": [],
    }),
)

cpplint()
